# music_df

./: .gitignore  .readthedocs.yaml  BUG_endings_without_repeats.md  CLAUDE.md  README.md  TODO.md  aug6-plan.md  conftest.py  debug_beethoven_b076_float_drift.md  justfile  masking_demo.ipynb  music_df_time_sig_onset_bug.md  predictions_notes.md  pyproject.toml  pytest.ini  reconstruct_degree_bug.md  requirements.txt  setup.py  split_notes_barline_bug.md  test_requirements.txt
.claude/: settings.local.json
music_df/: __init__.py  add_analysis.py  add_feature.py  align_dfs.py  augmentations.py  chord_df.py  constants.py  crop_df.py  dedouble.py  dedouble_instruments.py  detremolo.py  find.py  join_repeated_notes.py  keys.py  label_df.py  merge_dfs.py  merge_notes.py  plot.py  quantize_df.py  read.py  read_csv.py  read_krn.py  read_midi.py  read_rntxt.py  read_xml.py  remove_repeated_bars.py  salami_slice.py  script_helpers.py  segment_df.py  slice_df.py  sort_df.py  split_df.py  split_notes.py  split_notes_at_barlines.py  sync_df.py  syntax_test.py  time.py  to_absolute_time.py  transforms.py  transpose.py
music_df/conversions/: __init__.py  ms3.py  music_21.py  symusic_conv.py
music_df/harmony/: chords.py  key_profiles.py  matching.py  modulation.py
music_df/humdrum_export/: __init__.py  collate_spines.py  color_df.py  constants.py  df_to_homo_df.py  df_to_spines.py  dur_to_kern.py  fallback_meter.py  humdrum_export.py  merge_spines.py  pdf.py  verovio_utils.py
music_df/midi_parser/: __init__.py  parser.py
music_df/playback/: __init__.py  _player.py  _soundfont.py
music_df/plot_piano_rolls/: plot.py  plot_helper.py
notebooks/: bass_matching_demo.ipynb  bass_matching_demo_colored.ipynb  chord_matching_demo_colored.ipynb  sounding_bass_demo.ipynb
notes/: chord_df_formats.md  midi_parser_README.md  xml_parser_README.md  xml_parser_notes.md
scripts/: Dockerfile.build-linux  build_totable.sh  calculate_metrics_from_csvs.py  collate_predictions.py  dedouble_csvs.py  detremolo_csvs.py  get_synced_metrics.py  krn_to_csvs.py  label_dfs.py  midi_to_csvs.py  missing_files_to_csvs.py  plot_predictions.py  plot_predictions2.py  plot_scores.py  quantize_with_mscore.py  salami_slice_csvs.py  search_for_feature.py  xml_to_csvs.py
tests/: conftest.py  helpers_for_tests.py  test_add_feature.py  test_chord_df_round_trips.py  test_chord_df_validation.py  test_compare.py  test_dedouble.py  test_dedouble_instruments.py  test_demo_target_annotations.py  test_detremolo.py  test_diff_func.py  test_excerpt_coordinate_mapping.py  test_label_music_df_with_chord_df.py  test_percussion.py  test_playback.py  test_plot.py  test_plot_annotations.py  test_read_krn.py  test_read_rntxt.py  test_read_transforms.py  test_salami_slice.py  test_segment_df.py  test_split_notes.py  test_to_absolute_time.py  test_transform_attrs_preservation.py  test_transform_column_preservation.py  test_transform_skip.py
tools/: Dockerfile.build-linux  build_totable.sh  totable.cpp
user_scripts/: compare_normalized_modulations.sh  compare_score_and_chord_df.py  compare_xml_and_mid2.py  count_bar_deltas.py  guess_all_tempi.py  musicbert_metrics.sh  musicbert_predictions.sh  musicbert_synced_metrics.sh  musicbert_unlabeled_predictions.sh  normalize_modulations.py  plot_annotated_df.py  plot_harmony_annotations.py  tonicization_census.py  tonicization_results.ipynb  validate_modulation_normalization.py
(+102 files in other folders)
