[project]
name = "music_df"
version = "0.0.1"
description = "A library for working with Pandas dataframes representing music scores"
authors = [{ name = "Malcolm Sailor", email = "malcolm.sailor@gmail.com" }]
readme = "README.md"
# TODO: I think some of these dependencies should be optional
dependencies = [
    "pandas",
    "mido",
    "matplotlib",
    "pyyaml",
    "music21",
    "omegaconf",
    "mspell",
    "sh",
    "h5py",
    "tqdm",
    "metricker @ git+https://github.com/malcolmsailor/metricker.git",
]
license = { text = "MIT" }

# I haven't been able to get any automatic package discovery to work, so I'm
#   just going to list all sub-directories here.
[tool.setuptools]
packages = [
    "music_df",
    "music_df.conversions",
    "music_df.humdrum_export",
    "music_df.midi_parser",
    "music_df.plot_piano_rolls",
    "music_df.scripts",
    "music_df.show_scores",
    "music_df.utils",
    "music_df.xml_parser",
]

# [tool.setuptools.packages.find]
# where = ["music_df"]

[tool.setuptools.package-data]
"music_df.scripts.humdrum_export" = ["*.sh"]

[project.optional-dependencies]
dev = ["pytest", "pdoc3"]
