[project]
name = "music_df"
version = "0.0.1"
description = "A library for working with Pandas dataframes representing music scores"
authors = [{ name = "Malcolm Sailor", email = "malcolm.sailor@gmail.com" }]
readme = "README.md"
dependencies = [
    "pandas",
    "symusic",
    "tqdm",
]
license = { text = "MIT" }

# I haven't been able to get any automatic package discovery to work, so I'm
#   just going to list all sub-directories here.
[tool.setuptools]
packages = [
    "music_df",
    "music_df.conversions",
    "music_df.harmony",
    "music_df.humdrum_export",
    "music_df.humdrum_export.df_utils",
    "music_df.midi_parser",
    "music_df.plot_piano_rolls",
    "music_df.scripts",
    "music_df.scripts.configs",
    "music_df.scripts.humdrum_export",
    "music_df.show_scores",
    "music_df.utils",
    "music_df.xml_parser",
]

# [tool.setuptools.packages.find]
# where = ["music_df"]

[tool.setuptools.package-data]
"music_df.scripts.humdrum_export" = ["*.sh"]
"music_df.scripts.configs" = ["*.yaml"]

[project.optional-dependencies]
visualization = ["matplotlib"]
music21 = ["music21"]
humdrum = [
    "mspell",
    "sh",
    "metricker @ git+https://github.com/malcolmsailor/metricker.git",
]
scripts = ["omegaconf", "pyyaml", "h5py"]
dev = ["pytest", "pdoc3"]
full = [
    "music_df[visualization]",
    "music_df[music21]",
    "music_df[humdrum]",
    "music_df[scripts]",
]
